# xdsl

./: .coveragerc  .env.example  .git-blame-ignored-commits  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  .yapfignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  RELEASE-VERSION  RFC.md  STYLEGUIDE.md  Toy_Ch2.ipynb  add.onnx  asv.conf.json  autotune.py  bench_results.csv  bench_results2.11.22.csv  bench_results_31.10.22..csv  bench_results_31.10.22_more_stats.csv  buffered.mlir  call_lit.py  codecov.yaml  codecov.yml  constant_fold_arith.xdsl  dag.py  ematch_rewrite_rules.mlir  flake.nix  func.mlir  (+50 more)
.asv/html/: index.json  info.json  (+2 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  issue_template.md  parse_pyright_version.py  pull_request_template.md  release-drafter.yml
benchmarks/: Makefile  README.md  __init__.py  bench_utils.py  benchmarks.py  component__lexer.py  component__parser.py  component__pattern_rewriter.py  component__printer.py  components.py  end_to_end.py  helpers.py  import_xdsl_opt.py  imports.py  lexer.py  llvm_backend.py  micro__extensibility.py  micro__import_classes.py  micro__ir_traversal.py  micro__op_creation.py  microbenchmarks.py  parser.py  pattern_rewriter.py  printer.py  rewriting.py  slots.py  task__import_classes.py  task__load_dialects.py  task__op_creation  task__op_creation.py  utils.py  verifier.py  visualisations.py  warmed_timeit.py  workloads.py
docs/: .nav.yml  Kaleidoscope.ipynb  Toy.ipynb  Toy_Ch1.ipynb  Toy_Ch2.ipynb  __init__.py  blocks.py  conf.py  database_example.ipynb  elevate_rewriting.ipynb  eqsat.md  eqsat.mlir  example_ir.ipynb  gpu.ipynb  index.md  irdl.ipynb  mlir_interoperation.ipynb  mlir_interoperation.md  mpi-example.ipynb  onnx.ipynb  pyproject.toml  reference.md  reference.rst  requirements.txt  ret.mlir  source.mlir  source.xdsl  torch-to-riscv.py  tutorial.ipynb  xdsl-introduction.ipynb
docs/Toy/: Gen MLIR.ipynb  Toy_Ch0.ipynb  Toy_Ch1.ipynb  Toy_Ch2.ipynb  Toy_Ch3.ipynb  pyproject.toml
docs/Toy/examples/: affine.mlir  ast.toy  bla.toy  codegen.toy  interpret.toy  lit.cfg  scalar.toy
docs/Toy/examples/tests/: accelerate_toy.mlir  ch0.S  infer_shapes.mlir  inline.mlir  optimise_toy.mlir  to_linalg.toy
docs/Toy/examples/tests/with-mlir/: axpy.mlir  bla.toy  interpret.toy  lit.local.cfg  matmul.mlir  matmul_f32.mlir
docs/Toy/tests/: test_toy.py
docs/Toy/toy/: __main__.py  ast.py  compiler.py  dialect.py  interpreter.py  ir_gen.py  lexer.py  location.py  mlir_gen.py  parser.py  riscv_emulator.py  toy_ast.py
docs/Toy/toy/dialects/: riscv_debug.py  toy.py  toy_accelerator.py  vector.py
docs/Toy/toy/emulator/: emulator_iop.py  toy_accelerator.py  toy_accelerator_functions.py  toy_accelerator_instruction_functions.py  toy_accelerator_instructions.py
docs/Toy/toy/frontend/: ir_gen.py  lexer.py  location.py  parser.py  toy_ast.py
docs/Toy/toy/rewrites/: arith_float_to_int.py  dead_code_elimination.py  helpers.py  inline_toy.py  lower_arith_riscv.py  lower_func_riscv_func.py  lower_linalg_affine.py  lower_linalg_stream.py  lower_llvm.py  lower_memref_riscv.py  lower_printf_riscv.py  lower_riscv_cf.py  lower_scf_riscv.py  lower_stream_affine.py  lower_stream_scf.py  lower_stream_snitch_stream.py  lower_to_toy_accelerator.py  lower_toy.py  lower_toy_accelerator_to_riscv.py  lower_toy_affine.py  lower_toy_linalg.py  lower_vector.py  mlir_opt.py  optimise_toy.py  optimise_vector.py  reconcile_unrealized_casts.py  setup_riscv_pass.py  shape_inference.py
docs/Toy/toy/tests/: test_add_sections.py  test_end_to_end.py  test_inliner.py  test_interpreter.py  test_ir_gen.py  test_lower_memref_riscv.py  test_lower_printf.py  test_mlir_gen.py  test_parser.py  test_regalloc.py  test_riscv_emulation.py  test_riscv_ssa.py  test_shape_inference.py  test_toy.py  utils.py
docs/Toy/toy/tests/rewrites/: test_dce.py
experiments/: boolean_nest_20_50.xdsl  boolean_nest_2_5.xdsl  program_1.xdsl  program_10.xdsl  program_100.xdsl  program_1000.xdsl  program_10000.xdsl  program_3.xdsl  program_30.xdsl  program_300.xdsl  program_3000.xdsl
scripts/: gen_ref_pages.py  hooks.py  marimo_import_xdsl_wheel.py
tests/: affine_test.py  attribute_builder_test.py  attribute_definition_test.py  cf_test.py  conftest.py  convert_variadic_test.py  desymref_test.py  desymref_test_working.py  egg_boolean_test.py  egg_mlir_to_egraph_test.py  format_test.py  func_test.py  imm_rewriting_test.py  immutabiliy_experiments_rise_dot.py  immutabiliy_experiments_simple_add.py  immutabiliy_experiments_simple_add_0.py  immutabiliy_experiments_simple_add_1.py  immutabiliy_experiments_simple_add_2.py  immutabiliy_experiments_simple_add_3.py  immutabiliy_experiments_simple_add_4.py  is_satisfying_hint_test.py  linalg_test.py  memref_test.py  mlir_converter_test.py  mlir_printer_test.py  mytest.py  operation_builder_test.py  operation_definition_test.py  parser_error_test.py  parser_test.py  pattern_rewriter_test.py  pdl_rewrites.mlir  printer_test.py  rewriter_test.py  rise_dot_elevate_rewriting_test_.py  rise_dot_rewriting_test.py  rise_rewriting_test.py  rise_test.py  scf_test.py  std_test.py  (+72 more)
tests/my_plugin/: pyproject.toml
tests/my_plugin/src/my_plugin/: __init__.py
wgpu/: README.md  wgpu_compute.py  wgpu_interpreter.py  wgpu_translate.py
xdsl/: .xdsl_opt_main.py.swp  ConvertStencilToLLMLIR.py  __init__.py  _version.py  affine_ir.py  builder.py  bytecode_parser.py  context.py  conversion_pass.py  diagnostic.py  dialect_interfaces.py  elevate.py  eqsat_bookkeeper.py  folder.py  immutable_ir.py  immutable_utils.py  interface.py  interfaces.py  interpreter.py  ir.py  irdl.py  irdl_mlir_printer.py  irdl_op.py  irdl_to_pyrdl.py  jit.py  listlang.py  mlir_converter.py  onnx.mlir  parser.py  parser_ng.py  passes.py  pattern_rewriter.py  pattern_rewriter_eq.py  pipeline.py  printer.py  pyrdl_printer.py  rewriter.py  riscv_asm_writer.py  sasha_rewrite_pattern.py  syntax_printer.py  (+4 more)
(+3051 files in other folders)
