[metadata]
name = xdsl
version = 0.1.3
author = Mathieu Fehr
author_email = mathieu.fehr@gmail.com
description = xDSL package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xdslproject/xdsl
project_urls =
    Bug Tracker = https://github.com/xdslproject/xdsl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xdsl-opt = xdsl.xdsl_opt:main

[tool:pytest]
python_files = *_test.py test_*.py *_example.py example_*.py
