[metadata]
name = xdsl
author = Mathieu Fehr
author_email = mathieu.fehr@gmail.com
description = xDSL package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xdslproject/xdsl
project_urls =
    Bug Tracker = https://github.com/xdslproject/xdsl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
python_requires = >=3.10

[flake8]
max-line-length = 90
ignore = F403,E226,E731,E275,W503,F405,E722,E741,W504,W605,E402
exclude = .github

[flake8_nb]
max-line-length = 90
ignore = F403,E226,E731,E275,W503,F405,E722,E741,W504,W605,E402
exclude = .github

[options.package_data]
xdsl = py.typed

[tool:pytest]
python_files = *_test.py test_*.py *_example.py example_*.py
addopts = --durations=20 --maxfail=5

[versioneer]
VCS = git
style = pep440
versionfile_source = xdsl/_version.py
versionfile_build = xdsl/_version.py
tag_prefix = v

[aliases]
test = pytest -v