[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64" ]

[project]
name = "toy"
version = "0.0.0"
description = "Toy compiler tutorial (xdsl repo only, not published)"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "riscemu", "xdsl" ]
scripts.toyc = "toy.__main__:main"

[tool.setuptools]
package-dir.toy = "toy"
packages.find.where = [ "." ]
packages.find.include = [ "toy*" ]
packages.find.namespaces = true
