[project]
name = "my-plugin"
description = "Plugin to test pass and transform discovery"
readme = "README.md"
license = { text = "Apache License v2.0 with LLVM Exceptions" }
authors = [ { name = "Sasha Lopoukhine", email = "sasha@lopoukhine.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [ "xdsl" ]
entry-points."xdsl.universe".my_plugin = "my_plugin:MY_UNIVERSE"
